--- a/members/index.html
+++ b/members/index.html
@@ -7,7 +7,7 @@ group: members
 <h1>Bondy-Denomy Lab Members</h1>
 
 The Bondy-Demomy lab welcomes people of any race, ethnicity, religion, national origin, gender identity, gender expression, caregiver and family commitments, political affiliation, sexual orientation, and eligible age or disability status.<br>
-<h5>See our<a href="/philosophy/"> lab compact and philosophy</a>.</h5>
+<h5>See our<a href="/jbd-lab/philosophy/"> lab compact and philosophy</a>.</h5>
 
 {% for member in site.members %}
 
@@ -34,27 +34,27 @@ The Bondy-Demomy lab welcomes people of any race, ethnicity, religion, national 
                   <a style="overflow-wrap: break-word;" href= "{{member.website}}">{{member.website}}</a> <br>
                 {% endif %}
                 {% if member.orcid %}
-                  <a href="http://orcid.org"><img class="inline-block mem-icon" src="/static/img/logo/orcid_logo.svg"></a>
+                  <a href="http://orcid.org"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/orcid_logo.svg"></a>
                   <a href="http://orcid.org/{{member.orcid}}"> {{member.orcid}}</a> <br>
                 {% endif %}
                 {% if member.linkedin %}
-                  <a href="http://www.linkedin.com"><img class="inline-block mem-icon" src="/static/img/logo/linkedin_logo.svg"></a>
+                  <a href="http://www.linkedin.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/linkedin_logo.svg"></a>
                   <a href= "http://www.linkedin.com/in/{{member.linkedin}}"> {{member.linkedin}} </a> <br>
                 {% endif %}
                 {% if member.UCSF %}
-                  <a href="http://www.ucsf.edu"><img class="inline-block mem-icon" src="/static/img/logo/ucsf_logo_black.svg"></a>
+                  <a href="http://www.ucsf.edu"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/ucsf_logo_black.svg"></a>
                   <a href= "http://profiles.ucsf.edu/{{member.UCSF}}"> Profile </a> <br>
                 {% endif %}
                 {% if member.scholar %}
-                  <a href="http://scholar.google.com"><img class="inline-block mem-icon" src="/static/img/logo/gscholar_logo.svg"></a>
+                  <a href="http://scholar.google.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/gscholar_logo.svg"></a>
                   <a href= "http://scholar.google.com/citations?user={{member.scholar}}"> {% if member.timeline_name %}{{ member.timeline_name }}{% else %}{{ member.name | split: " " | first }}{% endif %}'s Citations </a> <br>
                 {% endif %}
                 {% if member.twitter %}
-                  <a href="http://twitter.com"><img class="inline-block mem-icon" src="/static/img/logo/twitter_logo.svg"></a>
+                  <a href="http://twitter.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/twitter_logo.svg"></a>
                   <a href= "http://twitter.com/{{member.twitter}}"> @{{member.twitter}} </a> <br>
                 {% endif %}
                 {% if member.github %}
-                  <a href="http://github.com"><img class="inline-bloc mem-icon" src="/static/img/logo/github_logo.svg"></a>
+                  <a href="http://github.com"><img class="inline-bloc mem-icon" src="/jbd-lab/static/img/logo/github_logo.svg"></a>
                   <a href= "http://github.com/{{member.github}}"> {{member.github}} </a> <br>
                 {% endif %}
             </div>
@@ -88,27 +88,27 @@ The Bondy-Demomy lab welcomes people of any race, ethnicity, religion, national 
                   <a style="overflow-wrap: break-word;" href= "{{member.website}}">{{member.website}}</a> <br>
                 {% endif %}
                 {% if member.orcid %}
-                  <a href="http://orcid.org"><img class="inline-block mem-icon" src="/static/img/logo/orcid_logo.svg"></a>
+                  <a href="http://orcid.org"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/orcid_logo.svg"></a>
                   <a href="http://orcid.org/{{member.orcid}}"> {{member.orcid}}</a> <br>
                 {% endif %}
                 {% if member.linkedin %}
-                  <a href="http://www.linkedin.com"><img class="inline-block mem-icon" src="/static/img/logo/linkedin_logo.svg"></a>
+                  <a href="http://www.linkedin.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/linkedin_logo.svg"></a>
                   <a href= "http://www.linkedin.com/in/{{member.linkedin}}"> {{member.linkedin}} </a> <br>
                 {% endif %}
                 {% if member.UCSF %}
-                  <a href="http://www.ucsf.edu"><img class="inline-block mem-icon" src="/static/img/logo/ucsf_logo_black.svg"></a>
+                  <a href="http://www.ucsf.edu"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/ucsf_logo_black.svg"></a>
                   <a href= "http://profiles.ucsf.edu/{{member.UCSF}}"> Profile </a> <br>
                 {% endif %}
                 {% if member.scholar %}
-                  <a href="http://scholar.google.com"><img class="inline-block mem-icon" src="/static/img/logo/gscholar_logo.svg"></a>
+                  <a href="http://scholar.google.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/gscholar_logo.svg"></a>
                   <a href= "http://scholar.google.com/citations?user={{member.scholar}}"> Scholar Citations </a> <br>
                 {% endif %}
                 {% if member.twitter %}
-                  <a href="http://twitter.com"><img class="inline-block mem-icon" src="/static/img/logo/twitter_logo.svg"></a>
+                  <a href="http://twitter.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/twitter_logo.svg"></a>
                   <a href= "http://twitter.com/{{member.twitter}}"> @{{member.twitter}} </a> <br>
                 {% endif %}
                 {% if member.github %}
-                  <a href="http://github.com"><img class="inline-bloc mem-icon" src="/static/img/logo/github_logo.svg"></a>
+                  <a href="http://github.com"><img class="inline-bloc mem-icon" src="/jbd-lab/static/img/logo/github_logo.svg"></a>
                   <a href= "http://github.com/{{member.github}}"> {{member.github}} </a> <br>
                 {% endif %}
             </div>
