--- a/members/index.html
+++ b/members/index.html
@@ -3,7 +3,9 @@ title: Bondy-Denomy Lab Members
 layout: members
 group: members
 ---
-
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/custom.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/syntax.css">
 <h1>Bondy-Denomy Lab Members</h1>
 
 The Bondy-Demomy lab welcomes people of any race, ethnicity, religion, national origin, gender identity, gender expression, caregiver and family commitments, political affiliation, sexual orientation, and eligible age or disability status.<br>
