--- a/members/index.html
+++ b/members/index.html
@@ -66,6 +66,60 @@ The Bondy-Demomy lab welcomes people of any race, ethnicity, religion, national 
         </div>
 {% endfor %}
 <hr>
+{% for member in site.members %}
+
+{% unless member.enddate == empty %}
+{% continue %}
+{% endunless %}
+
+{% unless member.position contains "Affiliate" %}
+{% continue %}
+{% endunless %}
+
+        <hr>
+          <div id = "{{member.name}}" class="row" style="padding-top: 60px; margin-top: -60px;">
+            <div class="col-sm-4">
+                <img class="img-fluid" src="{{member.image}}" {% if member.altimage %} onmouseover="this.src='{{member.altimage}}';" onmouseout="this.src='{{member.image}}';" {% endif %} alt="{{member.name}}"; width="365"; height="365"><br>
+                <strong>{{member.name}}</strong> <br>
+                {% if member.pronouns %}
+                  <em>{{member.pronouns}}</em> <br>
+                {% endif %}
+                {{member.position | markdownify | remove: '<p>' | remove: '</p>' }} <br>
+                <em>{{member.email}}</em> <br>
+                {% if member.website %}
+                  <a style="overflow-wrap: break-word;" href= "{{member.website}}">{{member.website}}</a> <br>
+                {% endif %}
+                {% if member.orcid %}
+                  <a href="http://orcid.org"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/orcid_logo.svg"></a>
+                  <a href="http://orcid.org/{{member.orcid}}"> {{member.orcid}}</a> <br>
+                {% endif %}
+                {% if member.linkedin %}
+                  <a href="http://www.linkedin.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/linkedin_logo.svg"></a>
+                  <a href= "http://www.linkedin.com/in/{{member.linkedin}}"> {{member.linkedin}} </a> <br>
+                {% endif %}
+                {% if member.UCSF %}
+                  <a href="http://www.ucsf.edu"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/ucsf_logo_black.svg"></a>
+                  <a href= "http://profiles.ucsf.edu/{{member.UCSF}}"> Profile </a> <br>
+                {% endif %}
+                {% if member.scholar %}
+                  <a href="http://scholar.google.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/gscholar_logo.svg"></a>
+                  <a href= "http://scholar.google.com/citations?user={{member.scholar}}"> Scholar Citations </a> <br>
+                {% endif %}
+                {% if member.twitter %}
+                  <a href="http://twitter.com"><img class="inline-block mem-icon" src="/jbd-lab/static/img/logo/twitter_logo.svg"></a>
+                  <a href= "http://twitter.com/{{member.twitter}}"> @{{member.twitter}} </a> <br>
+                {% endif %}
+                {% if member.github %}
+                  <a href="http://github.com"><img class="inline-bloc mem-icon" src="/jbd-lab/static/img/logo/github_logo.svg"></a>
+                  <a href= "http://github.com/{{member.github}}"> {{member.github}} </a> <br>
+                {% endif %}
+            </div>
+            <div class="col-sm-8">
+                {{member.description | markdownify}}
+            </div>
+        </div>
+{% endfor %}
+<hr>
 
 <div>
 {% assign stretch = 60 %}
